--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -62,14 +62,13 @@
 
 
 .headerImage {
-    grid-row: 4/10;
-    grid-column: 7/11;
+    grid-row: 5/11;
+    grid-column: 8/11;
     z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    margin-top: 20px;
 }
 
 .headerImage img {
@@ -84,8 +83,8 @@
     display: block;
     top: -100px;
     left: -50px;
-    width:540px;
-    height: 540px;
+    width:120%;
+    height: 120%;
     background-color: rgb(153, 226, 255);
     border-radius: 50%;
     z-index: -1;
