--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -4,7 +4,6 @@
     grid-template-rows: repeat(12,1fr);
     width: 100%;
     height: 100vh;
-    margin-top: -25px;
     background-color: #E6F6FE;
     
 }
@@ -43,10 +42,13 @@
     cursor: pointer;
 }
 
-.active{
+.sectionsDots > .active{
     background-color: #065A82;
     transform: scale(1.2);
+    border-radius: 50%;
+    transition: all .1s ease;
 }
+
 
 .sectionsDots{
     display: flex;
@@ -88,4 +90,16 @@
     background-color: rgb(153, 226, 255);
     border-radius: 50%;
     z-index: -1;
+}
+
+
+.sectionNumbers{
+    grid-row: 11/13;
+    grid-column: 12/13;
+    color : #065A82;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
