--- a/src/components/portfolio/style.css
+++ b/src/components/portfolio/style.css
@@ -1,9 +1,10 @@
-.about{
+.portfolio{
     display: grid;
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: repeat(12,1fr);
     width: 100%;
     height: 100vh;
+    background-color: #E6F6FE;
 }
 
 .sectionNumbers{
