--- a/src/components/about/style.css
+++ b/src/components/about/style.css
@@ -16,3 +16,33 @@
     align-items: center;
 
 }
+
+.svgTest{
+    
+    object-fit: cover;
+    grid-row: 3/8;
+    grid-column: 3/7;
+}
+
+
+svg{
+    width: 100%;
+}
+
+#thoughts{
+    animation: rotate 2s infinite linear;
+    transform-origin: center;
+    transform-box: fill-box;
+}
+
+
+
+@keyframes rotate {
+    from{
+        transform: rotateZ(0deg);
+    }
+    to{
+        transform: rotateZ(360deg);
+    }
+}
+
