--- a/src/components/bars/style.css
+++ b/src/components/bars/style.css
@@ -4,3 +4,44 @@
     border-radius: 50%;
     transition: all .1s ease;
 }
+
+
+
+.profile{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+  
+  }
+  
+  .profilePlaceholder{
+    height: 155px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 11px;
+  }
+  .profileImg {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  
+  #hamburger {
+    position: relative;
+    left: 30px;
+  }
+  
+  /*Sidebar*/
+  
+  .MuiListItemIcon-root  {
+    color: white !important;
+    margin-left: 4px;
+  }
+  
+  .MuiSvgIcon-root{
+    fill: white !important;
+  }
