--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -90,6 +90,7 @@
     background-color: rgb(153, 226, 255);
     border-radius: 50%;
     z-index: -1;
+    animation:  5s infinite alternate linear svgBackground ;
 }
 
 
@@ -101,5 +102,80 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+}
+
+.myName{
+    grid-row: 5/6;
+    grid-column: 4/8;
+    align-self: start;
+    justify-content: center;
+    letter-spacing: 3px;
+    font-size: 60px;
+    z-index: 2;
+}
+
+.prefix{
+    grid-row: 4/5;
+    grid-column: 4/8;
+    align-self: end;
+   
+}
+
+.description{
+    grid-row: 6/9;
+    grid-column: 4/8;
+    z-index: 2;
+}
+
+@keyframes svgBackground {
+    0%{
+        top: -100px;
+        left: -50px;
+    }
+    10%{
+        top: -110px;
+        left: -60px;
+    }
+    20%{
+        top: -100px;
+        left: -50px;
+    }
+
+    30%{
+        top: -90px;
+        right: -60px;
+    }
+
+    40%{
+        top: -100px;
+        left: -50px;
+    }
+    50%{
+        top: -110px;
+        left: -40px;
+    }
+    60%{
+        top: -100px;
+        right: -50px;
+    }
+    70%{
+        top: -90px;
+        right: -60px;
+    }
+    80%{
+        top: -100px;
+        left: -50px;
+    }
+    90%{
+        top: -110px;
+        left: -60px;
+    }
+
+    100%{
+        top: -110px;
+        right: -60px;
+    }
+    
 
 }
