--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -128,6 +128,11 @@
     z-index: 2;
 }
 
+.nav{
+    grid-row: 1/2;
+    grid-column: 4/7;
+}
+
 @keyframes svgBackground {
     0%{
         top: -100px;
