--- a/src/components/about/style.css
+++ b/src/components/about/style.css
@@ -18,12 +18,7 @@
 }
 
 
-.aboutDescription{
-    grid-row: 4/8;
-    grid-column: 7/11;
-    margin-left: 100px;
-    margin-top: 45px;
-}
+
 
 .aboutMe{
     display: flex;
@@ -41,6 +36,37 @@
     height: 100%;
 }
 
+.rightSide p {
+    width: 65%;
+    margin-left: 100px;
+    margin-top: 45px;
+    font-size: 18px;
+    position: relative;
+    
+    z-index: 1;
+}
+
+.rightSide p::before{
+    content: "";
+    position: absolute;
+    top: 280px;
+    left: 20px;
+    width: 200px;
+    height: 200px;
+    border: 10px solid rgb(163, 163, 163);
+    z-index: -1;
+}
+
+.rightSide p::after{
+    content: "";
+    position: absolute;
+    top: 300px;
+    left: 0;
+    width: 200px;
+    height: 200px;
+    background-color: #fff;
+    z-index: -1;
+}
 
 
 
