--- a/src/components/resume/style.css
+++ b/src/components/resume/style.css
@@ -4,5 +4,6 @@
     grid-template-rows: repeat(12,1fr);
     width: 100%;
     height: 100vh;
-    background-color: #E6F6FE;
+    background-color: #fff;
+
 }
