--- a/src/components/resume/style.css
+++ b/src/components/resume/style.css
@@ -34,3 +34,18 @@
 .resume img {
     width: 200px;
 }
+.expa{
+    grid-row: 3/5;
+    grid-column: 3/7;
+}
+
+.skills{
+    grid-row: 3/5;
+    grid-column: 8/11;
+    height: 100%;
+}
+
+.MuiPaper-root {
+    height: 10%;
+    z-index: 4;
+}
