--- a/src/components/resume/style.css
+++ b/src/components/resume/style.css
@@ -34,7 +34,7 @@
 .resume img {
     width: 200px;
 }
-.expa{
+.informationDropDownList{
     grid-row: 3/5;
     grid-column: 3/7;
 }
@@ -43,6 +43,7 @@
     grid-row: 3/5;
     grid-column: 8/11;
     height: 100%;
+   
 }
 
 .MuiPaper-root {
