--- a/src/components/resume/style.css
+++ b/src/components/resume/style.css
@@ -4,45 +4,38 @@
     grid-template-rows: repeat(12,1fr);
     width: 100%;
     height: 100vh;
-    background-color: #fff;
+   
+    background-color : #e7eff9;
+    background-image: linear-gradient(315deg, #e7eff9 0%, #cfd6e6 74%);
 
 }
 
-.box1,
-.box2,
-.box3{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
 
-.box1{
-    grid-row: 3/5;
+
+.resumeInfo{
+    grid-row: 3/11;
     grid-column: 3/11;
+    width: 100%;
+    height: 102% !important;
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: repeat(12,1fr);
+    padding: 10px;
 }
 
-.box2{
-    grid-row: 6/8;
-    grid-column: 3/11;
+.resume .heading-1 {
+    color: white;
 }
 
-.box3{
-    grid-row: 9/11;
-    grid-column: 3/11;
-}
-
-.resume img {
-    width: 200px;
-}
 .informationDropDownList{
-    grid-row: 3/5;
-    grid-column: 3/7;
+    grid-row: 2/12;
+    grid-column: 2/7;
 }
 
 .skills{
-    grid-row: 3/5;
-    grid-column: 8/11;
-    height: 100%;
+    height: 110% !important;
+    grid-row: 2/12;
+    grid-column: 7/12;
 }
 
 .MuiPaper-root {
