--- a/src/components/animation/keyframes.css
+++ b/src/components/animation/keyframes.css
@@ -40,6 +40,7 @@
     90%{
         transform: rotateZ(1deg);
     }
+
     100%{
         transform: rotateZ(0deg);
     }
@@ -101,6 +102,33 @@
     
 
 }
+
+@keyframes animate{
+    0%,100%{
+      top:0;
+    }
+    20%{
+      top:0px;
+    }  
+    25%{
+      top:-50px;
+    }
+    45%{
+      top:-50px;
+    }
+    50%{
+      top:-100px;
+    }
+    70%{
+      top:-100px;
+    }
+    75%{
+      top:-150px;
+    }
+    95%{
+      top:-150px;
+    }
+  }
 
 
 /**/
