--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -18,7 +18,7 @@
     justify-content: space-evenly;
     align-items: center;
     position: fixed;
-   
+    z-index: 7;
 }
 
 .socialMediaIcons{
@@ -50,6 +50,7 @@
 }
 
 
+
 .sectionsDots{
     display: flex;
     flex-direction: column;
@@ -59,6 +60,7 @@
     height: 20vh;
     justify-content: space-evenly;
     align-items: center;
+    z-index: 7;
 }
 
 
@@ -173,29 +175,191 @@
   color:#e58e26;
 }
 
-@keyframes animate{
-  0%,100%{
-    top:0;
+
+
+
+@media only screen and (max-width:1339px){
+  .myName{
+    font-size: 45px;
+    z-index: 0;
   }
-  20%{
-    top:0px;
-  }  
-  25%{
-    top:-50px;
+
+  .description{
+    grid-column: 3/6;
+    z-index: 0;
   }
-  45%{
-    top:-50px;
+
+  .headerImage {
+    grid-row: 4/11;
+    grid-column: 7/11;
   }
-  50%{
-    top:-100px;
+
+  .headerImage img{
+    width: 100%;
+    height: 100%;
+  } 
+
+  .headerImage::before{
+  display: none;
+   
+}
+}
+
+@media only screen and (max-width:1065px){
+  .myName{
+    font-size: 35px;
+    z-index: 0;
   }
-  70%{
-    top:-100px;
+
+  .description{
+    grid-column: 3/6;
+    font-size: 16px ;
   }
-  75%{
-    top:-150px;
+
+}
+
+.sectionNumbersBackground{
+  font-size: 300px;
+  grid-row: 6/10;
+}
+
+@media only screen and (max-width:880px){
+  .headerImage{
+    display: none;
   }
-  95%{
-    top:-150px;
+
+  
+
+  .myName{
+    font-size: 50px;
+    grid-row: 5/6;
+    grid-column: 4/12;
+    z-index: 0;
+  }
+
+  .description{
+    grid-column: 3/6;
+    font-size: 15px ;
+    grid-column: 4/12;
+  }
+
+  .prefix{
+    grid-column: 4/12;
+  }
+}
+
+@media only screen and (max-width:800px){
+  .myName{
+    font-size: 50px;
+    grid-row: 5/6;
+    grid-column: 4/11;
+    z-index: 0;
+  }
+
+  .description{
+    grid-column: 3/6;
+    font-size: 15px ;
+    grid-column: 4/11;
+  }
+
+  .prefix{
+    grid-column: 4/11;
+  }
+}
+
+@media only screen and (max-width:712px){
+  .myName{
+    font-size: 40px;
+    grid-row: 5/6;
+    grid-column: 4/11;
+   
+  }
+
+  .description{
+    grid-column: 3/6;
+    font-size: 15px ;
+    grid-column: 4/11;
+  }
+
+  .prefix{
+    grid-column: 4/11;
+  }
+}
+
+@media only screen and (max-width:600px){
+  .myName{
+    font-size: 30px;
+    grid-column: 4/12;
+  }
+
+  .description{
+    grid-column: 3/6;
+    font-size: 15px ;
+    grid-column: 4/11;
+  }
+
+  
+
+  .sectionNumbersBackground{
+    font-size: 250px;
+ 
+  }
+
+  .sectionsDots{
+    right: 48px;
+  }
+
+  .socialMedia{
+    right: 38px;
+  }
+  
+}
+
+@media only screen and (max-width:450px){
+
+  .myName{
+    font-size: 25px;
+
+  }
+
+  .description{
+   
+    font-size: 14px ;
+ 
+  }
+
+
+}
+
+@media only screen and (max-width:400px){
+
+  .socialMediaIcons{
+    width: 80%;
+  }
+
+  .myName{
+    font-size: 25px;
+    grid-column: 4/13;
+    margin-left: 5px;
+  }
+
+  .description{
+    
+  }
+
+  
+
+  .sectionNumbersBackground{
+    font-size: 250px;
+ 
+  }
+
+
+  .sectionsDots{
+    right:38px;
+  }
+
+  .socialMedia{
+    right: 28px;
   }
 }
